force-app/main/default/objects/Special_Process_Record_Types_Ids__c/Special_Process_Record_Types_Ids__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Defines Id for each record types of Merchant Special Process object. Used in process builders to create records.</description>
    <label>Special Process Record Types Ids</label>
</CustomObject>