force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Back_Camp__c.field-meta.xml
<CustomField>
    <fullName>Back_Camp__c</fullName>
    <label>Back Camp</label>
    <length>18</length>
    <type>Text</type>
</CustomField>