force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Business_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Business_Alerts__c</fullName>
    <label>Business Alerts</label>
    <length>18</length>
    <type>Text</type>
</CustomField>