force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Debit_note__c.field-meta.xml
<CustomField>
    <fullName>Debit_note__c</fullName>
    <description>Debit note record type&apos;s Id.</description>
    <label>Debit note</label>
    <length>18</length>
    <type>Text</type>
</CustomField>