force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Exit__c.field-meta.xml
<CustomField>
    <fullName>Exit__c</fullName>
    <description>Exit Record Type&apos;s Id.</description>
    <label>Exit</label>
    <length>18</length>
    <type>Text</type>
</CustomField>