force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Exit_US__c.field-meta.xml
<CustomField>
    <fullName>Exit_US__c</fullName>
    <label>Exit US</label>
    <length>18</length>
    <type>Text</type>
</CustomField>