force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Financial_alerts__c.field-meta.xml
<CustomField>
    <fullName>Financial_alerts__c</fullName>
    <label>Financial alerts</label>
    <length>18</length>
    <type>Text</type>
</CustomField>