force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <description>Follow Up record type&apos;s Id</description>
    <label>Follow Up</label>
    <length>18</length>
    <type>Text</type>
</CustomField>