force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Follow_Up_buyback__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_buyback__c</fullName>
    <label>Follow Up_buyback</label>
    <length>18</length>
    <type>Text</type>
</CustomField>