force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Follow_up_US__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_US__c</fullName>
    <label>Follow up US</label>
    <length>18</length>
    <type>Text</type>
</CustomField>