force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Invoice_Compliance_Audit_del__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Compliance_Audit_del__c</fullName>
    <label>Invoice Compliance Audit</label>
    <length>18</length>
    <type>Text</type>
</CustomField>