force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Lead_Seller_Qualification_Form__c.field-meta.xml
<CustomField>
    <fullName>Lead_Seller_Qualification_Form__c</fullName>
    <label>Lead &amp; Seller Qualification Form</label>
    <length>18</length>
    <type>Text</type>
</CustomField>