force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Merchant_EU__c.field-meta.xml
<CustomField>
    <fullName>Merchant_EU__c</fullName>
    <label>Merchant EU</label>
    <length>18</length>
    <type>Text</type>
</CustomField>