force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Merchant_US__c.field-meta.xml
<CustomField>
    <fullName>Merchant_US__c</fullName>
    <label>Merchant US</label>
    <length>18</length>
    <type>Text</type>
</CustomField>