force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Monitoring_Period_Sales__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Period_Sales__c</fullName>
    <label>Monitoring Period - Sales</label>
    <length>18</length>
    <type>Text</type>
</CustomField>