force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/MOP_Alert__c.field-meta.xml
<CustomField>
    <fullName>MOP_Alert__c</fullName>
    <label>MOP Alert</label>
    <length>18</length>
    <type>Text</type>
</CustomField>