force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Mystery_Order__c.field-meta.xml
<CustomField>
    <fullName>Mystery_Order__c</fullName>
    <label>Mystery Order</label>
    <length>18</length>
    <type>Text</type>
</CustomField>