force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/NMO__c.field-meta.xml
<CustomField>
    <fullName>NMO__c</fullName>
    <label>NMO</label>
    <length>18</length>
    <type>Text</type>
</CustomField>