force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/NMO_Alert__c.field-meta.xml
<CustomField>
    <fullName>NMO_Alert__c</fullName>
    <label>NMO - Alert</label>
    <length>18</length>
    <type>Text</type>
</CustomField>