force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/NMO_buyback__c.field-meta.xml
<CustomField>
    <fullName>NMO_buyback__c</fullName>
    <label>NMO_buyback</label>
    <length>18</length>
    <type>Text</type>
</CustomField>