force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/NMO_U_S__c.field-meta.xml
<CustomField>
    <fullName>NMO_U_S__c</fullName>
    <label>NMO_U_S</label>
    <length>18</length>
    <type>Text</type>
</CustomField>