force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <label>Onboarding</label>
    <length>18</length>
    <type>Text</type>
</CustomField>