force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Onboarding_buyback__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_buyback__c</fullName>
    <label>Onboarding_buyback</label>
    <length>18</length>
    <type>Text</type>
</CustomField>