force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Onboarding_Buyback_US__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Buyback_US__c</fullName>
    <label>Onboarding Buyback US</label>
    <length>18</length>
    <type>Text</type>
</CustomField>