force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Onboarding_JP__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_JP__c</fullName>
    <label>Onboarding JP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>