force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Perf_data_Business__c.field-meta.xml
<CustomField>
    <fullName>Perf_data_Business__c</fullName>
    <label>Perf data Business</label>
    <length>18</length>
    <type>Text</type>
</CustomField>