force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/PriceAndSelectionOpportunity__c.field-meta.xml
<CustomField>
    <fullName>PriceAndSelectionOpportunity__c</fullName>
    <label>PriceAndSelectionOpportunity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>