force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Severe_Issue__c.field-meta.xml
<CustomField>
    <fullName>Severe_Issue__c</fullName>
    <label>Severe Issue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>