force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/Targeted_Country_US__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Country_US__c</fullName>
    <label>Targeted Country US</label>
    <length>18</length>
    <type>Text</type>
</CustomField>