force-app/main/default/objects/Special_Process_Record_Types_Ids__c/fields/XBorder__c.field-meta.xml
<CustomField>
    <fullName>XBorder__c</fullName>
    <description>NMO XBorder record type&apos;s Id</description>
    <label>XBorder</label>
    <length>18</length>
    <type>Text</type>
</CustomField>